Stop Ticker causing text shift in mobile view

--- a/_sass/orangejellyfish/_jumbotron.scss
+++ b/_sass/orangejellyfish/_jumbotron.scss
@@ -5,11 +5,6 @@
   @include media-breakpoint-down(md) {
     padding: 2rem 1rem;
     padding-bottom: 40px;
-
-    h2 {
-      font-size: 42px;
-      padding-bottom: 48px;
-    }
   }
 }
 
