--- a/_sass/orangejellyfish/pages/_home.scss
+++ b/_sass/orangejellyfish/pages/_home.scss
@@ -12,4 +12,12 @@ body.home {
 
 .ticker-text {
   font-size: 4rem;
+  min-height:6rem;
+}
+
+@include media-breakpoint-down(xs) {
+  .ticker-text {
+    font-size:2.5rem;
+    min-height:8rem;
+  }
 }
